--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
                     </a>
                 </li>
                 <li routerLinkActive="active" role="none">
-                    <a role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0">
+                    <a routerLink="/categories" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0">
                         Prestations
                     </a>
                     <ul class="sub-menu" role="menu">
