--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -1,1 +1,85 @@
-<p>products works!</p>
+<div class="el-container tab-content" id="products-tab">
+    <div class="el-tab-panel" id="products-home" role="tabpanel" aria-labelledby="products-home-tab">
+        <a class="product-card">
+            <div class="product-card-body">
+                <div class="product-thumbnail">
+                    <img class="first-img" src="https://api-btd.elapp.fr/images/products/612241.jpg" alt="thumbnail">
+                </div>
+                <div class="product-description">
+                    <h3 class="title">Perfect Mascara</h3>
+                    <p class="sub-title">
+                        <span class="brand">COULEUR CARAMEL</span> - Couleur:
+                        <span class="color">41 - Noir</span>
+                    </p>
+                    <div class="star-rating">
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star de-selected"></span>
+                    </div>
+                    <div class="purchase">
+                        <h5 class="product-price">21,90€</h5>
+                        <button class="product-btn" data-toggle="modal" data-target="#add-to-cart">
+                            <span class="ion ion-bag"></span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a class="product-card">
+            <div class="product-card-body">
+                <div class="product-thumbnail">
+                    <img class="first-img" src="https://api-btd.elapp.fr/images/products/612101.jpg" alt="thumbnail">
+                </div>
+                <div class="product-description">
+                    <h3 class="title">Crayon yeux</h3>
+                    <p class="sub-title">
+                        <span class="brand">COULEUR CARAMEL</span> - Couleur:
+                        <span class="color">101 - Noir</span>
+                    </p>
+                    <div class="star-rating">
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star de-selected"></span>
+                    </div>
+                    <div class="purchase">
+                        <h5 class="product-price">9,90€</h5>
+                        <button class="product-btn" data-toggle="modal" data-target="#add-to-cart">
+                            <span class="ion ion-bag"></span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a class="product-card">
+            <div class="product-card-body">
+                <div class="product-thumbnail">
+                    <img class="first-img" src="https://api-btd.elapp.fr/images/products/617234.jpg" alt="thumbnail">
+                </div>
+                <div class="product-description">
+                    <h3 class="title">Rouge à lèvres satiné</h3>
+                    <p class="sub-title">
+                        <span class="brand">COULEUR CARAMEL</span> - Couleur:
+                        <span class="color">234 - Bois de rose</span>
+                    </p>
+                    <div class="star-rating">
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star"></span>
+                        <span class="ion ion-ios-star de-selected"></span>
+                    </div>
+                    <div class="purchase">
+                        <h5 class="product-price">18,90€</h5>
+                        <button class="product-btn" data-toggle="modal" data-target="#add-to-cart">
+                            <span class="ion ion-bag"></span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
