--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,7 +6,9 @@
     padding: .5rem;
     background-color: $third-color;
     a {
-        border: 2px solid white;
+        font-size: .9rem;
+        line-height: 1.4rem;
+        border: 1px solid white;
         border-radius: 2rem;
         padding: .1rem 1rem;
         &:hover,
@@ -31,24 +33,34 @@
         position: absolute;
         left: -2%;
         transform: rotate(-90deg);
-        border-top: 2px solid $second-color;
-        border-bottom: 2px solid $second-color;
-        padding: 0 .3rem 0 .4rem;
-        font-size: 0.6rem;
-        letter-spacing: .3rem;
+        border-top: 1px solid #e4beac;
+        border-bottom: 1px solid #e4beac;
+        padding: 0 .1rem 0 .2rem;
+        font-size: .3rem;
+        letter-spacing: .2rem;
+        line-height: 1rem;
         @media #{$scr-lg-xl} {
             left: -3rem;
+            border-top: 2px solid #e4beac;
+            border-bottom: 2px solid #e4beac;
             padding: .2rem .2rem .2rem .5rem;
             font-size: 1.8rem;
             letter-spacing: .5rem;
+            line-height: 3rem;
         }
         @media #{$scr-sm-md} {
-            max-width: 100%;
+            font-size: 0.6rem;
+            letter-spacing: .3rem;
+            line-height: 1.8rem;
+            padding: 0 .3rem 0 .4rem;
         }
     }
 }
 
 nav {
+    @media #{$scr-xs} {
+        display: none;
+    }
     border-bottom: 2px solid $first-color;
 }
 
