--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,6 +5,9 @@
     justify-content: flex-end;
     padding: .5rem;
     background-color: $third-color;
+    @media #{$scr-xs} {
+        padding: .3rem;
+    }
     a {
         font-size: .9rem;
         line-height: 1.4rem;
@@ -16,6 +19,10 @@
             color: $second-color;
             border: 2px dotted $first-color;
         }
+        @media #{$scr-xs} {
+            font-size: .5rem;
+            line-height: 1rem;
+        }
     }
 }
 
@@ -23,45 +30,50 @@
     position: relative;
     display: grid;
     align-items: center;
-    height: 12%;
     width: 100%;
     img {
         width: 100%;
         height: auto;
+        @media #{$scr-xs} {
+            width: 140%;
+            justify-self: center;
+        }
     }
     span {
         position: absolute;
-        left: -2%;
+        left: -3vw;
         transform: rotate(-90deg);
         border-top: 1px solid #e4beac;
         border-bottom: 1px solid #e4beac;
-        padding: 0 .1rem 0 .2rem;
-        font-size: .3rem;
-        letter-spacing: .2rem;
-        line-height: 1rem;
+        padding: 0 0 0 .9vw;
+        font-size: 2vw;
+        letter-spacing: 1vw;
+        line-height: 5vw;
+        @media #{$scr-sm-md} {
+            font-size: 1.6vw;
+            letter-spacing: .7vw;
+            line-height: 3.5vw;
+            padding: 0 .3vw 0 .9vw;
+        }
         @media #{$scr-lg-xl} {
-            left: -3rem;
             border-top: 2px solid #e4beac;
             border-bottom: 2px solid #e4beac;
-            padding: .2rem .2rem .2rem .5rem;
-            font-size: 1.8rem;
-            letter-spacing: .5rem;
-            line-height: 3rem;
-        }
-        @media #{$scr-sm-md} {
-            font-size: 0.6rem;
-            letter-spacing: .3rem;
-            line-height: 1.8rem;
-            padding: 0 .3rem 0 .4rem;
+            padding: 0.2vw 0.2vw 0.2vw 0.7vw;
+            letter-spacing: 0.5vw;
+            line-height: 3vw;
         }
     }
 }
 
 nav {
+    border-bottom: .125rem solid $first-color;
     @media #{$scr-xs} {
-        display: none;
+        position: relative;
+        width: 100%;
+        top: -3rem;
+        display: flex;
+        justify-content: flex-end;
     }
-    border-bottom: 2px solid $first-color;
 }
 
 ul.menubar {
@@ -70,18 +82,144 @@ ul.menubar {
     justify-content: center;
     text-transform: uppercase;
     color: $main-color;
+    margin: auto;
+    padding: 0;
+    @media #{$scr-xs} {
+        display: none;
+    }
     li {
         margin: 1rem;
         padding: .5rem;
-        font-size: 1.2rem;
+        font-size: 1.75vw;
         &.active>a {
             color: $third-color-light;
-            border-bottom: 2px solid $third-color-light;
+            border-bottom: .125rem solid $third-color-light;
         }
         &:not(.active)>a:hover,
         &:not(.active)>a:focus {
             color: $second-color;
             border-bottom: 2px solid $second-color;
+        }
+    }
+}
+
+.menu-btn {
+    display: grid;
+    place-items: center;
+    width: 4rem;
+    height: 4rem;
+    cursor: pointer;
+    z-index: 2;
+    transition: all 0.3s ease-in-out;
+    @media #{$scr-not-xs} {
+        display: none;
+    }
+}
+
+svg {
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+    .active & {
+        transform: rotate(90deg);
+    }
+    path {
+        transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:nth-child(1) {
+            transform-origin: 36% 40%;
+            .active & {
+                transform: translateX(9px) translateY(1px) rotate(45deg);
+            }
+        }
+        &:nth-child(2) {
+            stroke-dasharray: 29 299;
+            .active & {
+                stroke-dasharray: 225 299;
+                stroke-dashoffset: -72px;
+            }
+        }
+        &:nth-child(3) {
+            transform-origin: 35% 63%;
+            .active & {
+                transform: translateX(9px) translateY(1px) rotate(-45deg);
+            }
+        }
+        &:nth-child(4) {
+            stroke-dasharray: 29 299;
+            .active & {
+                stroke-dasharray: 225 299;
+                stroke-dashoffset: -72px;
+            }
+        }
+        &:nth-child(5) {
+            transform-origin: 61% 52%;
+            .active & {
+                transform: translateX(9px) translateY(1px) rotate(-45deg);
+            }
+        }
+        &:nth-child(6) {
+            transform-origin: 62% 52%;
+            .active & {
+                transform: translateX(9px) translateY(1px) rotate(45deg);
+            }
+        }
+    }
+}
+
+.wrapper {
+    position: fixed;
+    top: 10vw;
+    right: -12vw;
+    height: 40%;
+    width: 90%;
+    border-radius: 50%;
+    background: transparent;
+    clip-path: circle(25px at calc(100% - 45px) 45px);
+    transition: all 0.3s ease-in-out;
+    .active~& {
+        clip-path: circle(75%);
+        background: $third-color;
+    }
+    ul {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: auto;
+        padding: 0;
+        transform: translate(-50%, -50%);
+        list-style: none;
+        text-align: center;
+        li {
+            margin: 1rem;
+            a {
+                position: relative;
+                text-decoration: none;
+                font-size: 1.3rem;
+                padding: .3rem 1rem;
+                transition: all 0.3s ease;
+                &:hover,
+                &:focus {
+                    border: 1px solid $second-color;
+                    border-radius: 2rem;
+                }
+                &:after {
+                    position: absolute;
+                    content: "";
+                    background: #fff;
+                    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
+                    width: 104%;
+                    height: 110%;
+                    left: -2%;
+                    top: -5%;
+                    border-radius: 50px;
+                    transform: scaleY(0);
+                    z-index: -1;
+                    animation: rotate 1.5s linear infinite;
+                    transition: transform 0.3s ease;
+                }
+                &:hover:after {
+                    transform: scaleY(1);
+                }
+            }
         }
     }
 }
