--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -168,9 +168,9 @@ svg {
 .wrapper {
     position: fixed;
     top: 10vw;
-    right: -12vw;
-    height: 40%;
-    width: 90%;
+    top: 12vw;
+    right: -19vw;
+    height: 46vh;
     border-radius: 50%;
     background: transparent;
     clip-path: circle(25px at calc(100% - 45px) 45px);
