--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,7 +46,7 @@
                 </ul>
             </li>
             <li routerLinkActive="active" role="none">
-                <a routerLink="/shop" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0">
+                <a routerLink="/products" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0">
                     Produits
                 </a>
             </li>
@@ -69,52 +69,55 @@
             </li>
         </ul>
     </nav>
-    <div class="wrapper">
-        <ul role="menubar" aria-label="Menu">
-            <li routerLinkActive="active" role="none">
-                <a routerLink="/home" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
-                    Accueil
-                </a>
-            </li>
-            <li routerLinkActive="active" role="none">
-                <a routerLink="/about" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
-                    L'institut
-                </a>
-            </li>
-            <li routerLinkActive="active" role="none">
-                <a routerLink="/categories" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
-                    Prestations
-                </a>
-                <ul class="sub-menu" role="menu">
-                    <li *ngFor="let category of categories">
-                        <a [routerLink]="['/categories',category.idCategory]" role="menuitem" tabindex="-1" (click)="openCloseNav()">
-                            {{ category.name }}
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li routerLinkActive="active" role="none">
-                <a routerLink="/shop" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
-                    Produits
-                </a>
-            </li>
-            <li routerLinkActive="active" role="none">
-                <a role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
-                    Tarifs
-                </a>
-                <ul class="sub-menu" role="menu">
-                    <li *ngFor="let category of categories">
-                        <a [routerLink]="['/categories',category.idCategory]" role="menuitem" tabindex="0" (click)="openCloseNav()">
-                            {{ category.name }}
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li routerLinkActive="active" role="none">
-                <a routerLink="/contact" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
-                    Contact
-                </a>
-            </li>
-        </ul>
+    <div class="wrap-container">
+        <div class="wrapper">
+            <ul role="menubar" aria-label="Menu">
+                <li routerLinkActive="active" role="none">
+                    <a routerLink="/home" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
+                        Accueil
+                    </a>
+                </li>
+                <li routerLinkActive="active" role="none">
+                    <a routerLink="/about" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
+                        L'institut
+                    </a>
+                </li>
+                <li routerLinkActive="active" role="none">
+                    <a routerLink="/categories" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
+                        Prestations
+                    </a>
+                    <ul class="sub-menu" role="menu">
+                        <li *ngFor="let category of categories">
+                            <a [routerLink]="['/categories',category.idCategory]" role="menuitem" tabindex="-1" (click)="openCloseNav()">
+                                {{ category.name }}
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li routerLinkActive="active" role="none">
+                    <a routerLink="/shop" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
+                        Produits
+                    </a>
+                </li>
+                <li routerLinkActive="active" role="none">
+                    <a role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
+                        Tarifs
+                    </a>
+                    <ul class="sub-menu" role="menu">
+                        <li *ngFor="let category of categories">
+                            <a [routerLink]="['/categories',category.idCategory]" role="menuitem" tabindex="0" (click)="openCloseNav()">
+                                {{ category.name }}
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li routerLinkActive="active" role="none">
+                    <a routerLink="/contact" role="menuitem" aria-haspopup="true" aria-expanded="false" tabindex="0" (click)="openCloseNav()">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
+
 </header>
