--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -1,4 +1,5 @@
-<div class="el-container tab-content" id="products-tab">
+<div class="el-container" id="products-tab">
+    <h2>Nos produits disponibles</h2>
     <div class="el-tab-panel" id="products-home" role="tabpanel" aria-labelledby="products-home-tab">
         <a class="product-card" *ngFor="let product of products">
             <div class="product-card-body">
